--- a/index.njk
+++ b/index.njk
@@ -6,7 +6,7 @@ layout: base
 
 <div class="home-episodes">
     <div class="section">
-        <h2>Latest<h2>
+        <h2>Latest</h2>
         {% episodeCard collections.episodes | last, collections.episodes | last | episodeReadableDate, metadata.cdn_url %}
     </div>
 
