Fix episode block audio controls

--- a/css/site.css
+++ b/css/site.css
@@ -587,8 +587,7 @@ kbd kbd {
     text-transform: uppercase;
 }
 
-.episode-block .play,
-.episode-block .pause {
+.episode-block .media-buttons {
     cursor: pointer;
     grid-area: control;
 }
