--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -17,18 +17,18 @@
             </div>
             <nav id="site-nav" class="site-nav js-site-nav">
                 <ol>
-                    <li><a href="/">Home</a>
-                    <li><a href="/episodes/">Episodes</a>
-                    <li><a href="/about/">About</a>
-                    <li><a href="/subscribe/">Subscribe</a>
+                    <li><a href="/">[i] Home</a>
+                    <li><a href="/episodes/">[i] Episodes</a>
+                    <li><a href="/about/">[i] About</a>
+                    <li><a href="/subscribe/">[i] Subscribe</a>
                     {# <li><a href="/about/">About</a> #}
                     <li class="episode-info">
                         {% episodeBlock collections.episodes | last, metadata.cdn_url %}
                         {# <div><a href="#">Recommended</a></div> #}
                     <li>
                         <div class="site-nav-footer">
-                            <a href="/feed.rss">RSS</a>
-                            <a href="mailto:tto@koser.us">tto@koser.us</a>
+                            <a href="/feed.rss">[i] RSS</a>
+                            <a href="mailto:tto@koser.us">[i] tto@koser.us</a>
                         </div>
                 </ol>
             </nav>
@@ -38,9 +38,9 @@
         </main>
         <footer class="site-footer">
             <ol>
-                <li>[icon] Podcast by <a class="h-card" href="http://koser.us/melissa">Melissa</a> and <a class="h-card" href="http://koser.us/brian">Brian Koser</a>
-                <li>[icon] Website by <a class="h-card" href="http://koser.us/brian">Brian Koser</a>
-                <li>[icon] Logo by <a class="h-card" href="">Matt Koser</a>
+                <li>[i] Podcast by <a class="h-card" href="http://koser.us/melissa">Melissa</a> and <a class="h-card" href="http://koser.us/brian">Brian Koser</a>
+                <li>[i] Website by <a class="h-card" href="http://koser.us/brian">Brian Koser</a>
+                <li>[i] Logo by <a class="h-card" href="">Matt Koser</a>
             </ol>
         </footer>
         <script src="/js/site.js"></script>
