Home page first draft

--- a/css/site.css
+++ b/css/site.css
@@ -227,7 +227,7 @@ h6, .h6 {
 button {
     background: orangered;
     border: 1px solid orangered;
-    border-radius: 1em;
+    border-radius: 10px;
     color: white;
     cursor: pointer;
     display: inline-block;
@@ -284,6 +284,12 @@ img {
     height: auto;
     max-width: 96vw;
     width: auto; 
+}
+
+audio {
+    background-color: orangered;
+    border-radius: 10px;
+    width: 100%;
 }
 
 
@@ -574,7 +580,7 @@ kbd kbd {
 
 
 /*
-    EPISODE BLOCK
+    EPISODE BLOCK, EPISODE CARD
 */
 .episode-block {
     display: grid;
@@ -582,13 +588,12 @@ kbd kbd {
     grid-template-areas: 
         "empty    latest" 
         "control  episode";
-    row-gap: 5px;
-    column-gap: 5px;
+    column-gap: 15px;
 }
   
 .episode-block .latest {
     grid-area: latest;
-    font-size: 16px;
+    font-size: 14px;
     text-transform: uppercase;
 }
 
@@ -597,15 +602,19 @@ kbd kbd {
     grid-area: control;
 }
 
-.episode-block .episode {
-    grid-area: episode;
-    margin-left: -2.5px;
-    
+.episode-block .episode,
+.episode-card .episode {
     display: flex;
     align-items: baseline;
 }
 
-.episode-block .number {
+.episode-block .episode {
+    grid-area: episode;
+    margin-left: -2.5px;
+}
+
+.episode-block .number,
+.episode-card .number {
     font-size: 40px;
     line-height: 0.8em;
     margin-right: 0.2em;
