--- a/css/site.css
+++ b/css/site.css
@@ -119,6 +119,21 @@
 
 
 /*
+    VARIABLES
+*/
+:root {
+    --color-primary: orangered;
+    --color-black: rgb(38, 38, 38);
+    --color-white: white;
+    --color-dark-grey: rgb(70, 70, 70);
+}
+
+
+
+
+
+
+/*
     SECTIONING
     html, body, header, footer, nav, main, article, aside, section, p, pre,
     blockquote, figure, figcaption, address, summary, details, div
@@ -137,7 +152,7 @@ body, .body {
     font-family: Concourse, OpenSansNumero, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 20px;
     line-height: 1.5rem;
-    color: rgb(38, 38, 38);
+    color: var(--color-black);
     margin-bottom: 0;
     font-variant-ligatures: common-ligatures;
     width: 100%; /* see if this fixes too wide screen on mobile*/
@@ -225,10 +240,10 @@ h6, .h6 {
     optgroup, option, datalist, textarea, output
 */
 button {
-    background: orangered;
-    border: 1px solid orangered;
+    background: var(--color-primary);
+    border: 1px solid var(--color-primary);
     border-radius: 10px;
-    color: white;
+    color: var(--color-white);
     cursor: pointer;
     display: inline-block;
     font-size: 1rem;
@@ -240,8 +255,8 @@ button {
 
 button:hover,
 button:focus {
-  background-color: white;
-  color: rgb(38, 38, 38);
+  background-color: var(--color-white);
+  color: var(--color-black);
 }
 
 
@@ -287,7 +302,7 @@ img {
 }
 
 audio {
-    background-color: orangered;
+    background-color: var(--color-primary);
     border-radius: 10px;
     width: 100%;
 }
@@ -314,7 +329,7 @@ code {
 
 /* todo: https://codepen.io/ghepting/pen/tLnHK/ */
 a {
-  color: rgb(38, 38, 38);
+  color: var(--color-black);
   white-space: nowrap; 
 }
 
@@ -322,7 +337,7 @@ kbd kbd {
     background-color: #f7f7f7;
     border: 1px solid #ccc;
     border-radius: 3px;
-    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px #fff inset;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px var(--color-white) inset;
     color: #333;
     display: inline-block;
     font-size: 18px;
@@ -330,7 +345,7 @@ kbd kbd {
     line-height: 1.4;
     margin: 0 0.1em;
     padding: 0.1em 0.6em;
-    text-shadow: 0 1px 0 #fff;
+    text-shadow: 0 1px 0 var(--color-white);
     white-space: nowrap; 
 }
 
@@ -344,14 +359,14 @@ kbd kbd {
     hr, ::selection
 */
 ::-moz-selection {
-    background: rgb(38, 38, 38);
-    color: white;
+    background: var(--color-black);
+    color: var(--color-white);
     text-shadow: none; 
 }
 
 ::selection {
-    background-color: rgb(38, 38, 38);
-    color: white;
+    background-color: var(--color-black);
+    color: var(--color-white);
     text-shadow: none; 
 }
 
@@ -431,12 +446,12 @@ kbd kbd {
 .icon-demo-orion-line,
 .icon-demo-icons8-windows,
 .icon-demo-icons8-cute-outline {
-    background-color: rgb(255, 83, 73);
-    color: white;
+    background-color: var(--color-primary);
+    color: var(--color-white);
 }
 
 .icon-demo-orion-line {
-    stroke: white;
+    stroke: var(--color-white);
     stroke-width: 3;
 }
 
@@ -446,7 +461,7 @@ kbd kbd {
 
 .icon {
 	display: inline-block;
-	color: white;
+	color: var(--color-white);
     fill: currentColor;
 	font-size: 24px;
 	height: 1em;
@@ -465,12 +480,12 @@ kbd kbd {
 .site-header a,
 .site-footer,
 .site-footer a {
-    color: white;
+    color: var(--color-white);
 }
 
 .site-header {
     grid-area: header;
-    background-color: orangered;
+    background-color: var(--color-primary);
     padding: 1em 0;
 }
 
@@ -495,7 +510,7 @@ kbd kbd {
 
 .site-footer {
     grid-area: footer;
-    background-color: rgb(70, 70, 70);
+    background-color: var(--color-dark-grey);
     padding: 2em 1em;
 }
 
@@ -541,7 +556,7 @@ kbd kbd {
 }
 
 .site-nav .episode-info {
-    background-color: rgb(38, 38, 38);
+    background-color: var(--color-black);
     padding: 1em;
 }
 
