--- a/css/site.css
+++ b/css/site.css
@@ -101,6 +101,7 @@
 @font-face {
     font-family: OpenSansLightNumero;
     src: 
+        local("Open Sans"),
         url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightNumero.woff2") format("woff2"), 
         url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightNumero.woff") format("woff"); 
 }
@@ -108,6 +109,7 @@
 @font-face {
     font-family: OpenSansLightNumero;
     src: 
+        local("Open Sans"),
         url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightItalicNumero.woff2") format("woff2"), 
         url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightItalicNumero.woff") format("woff");
     font-style: italic; 
@@ -151,7 +153,7 @@ html, .root {
 body, .body {
     font-family: Concourse, OpenSansNumero, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 20px;
-    line-height: 1.5rem;
+    line-height: 1.5;
     color: var(--color-black);
     margin-bottom: 0;
     font-variant-ligatures: common-ligatures;
@@ -191,7 +193,7 @@ h3:first-child,
 h4:first-child,
 h5:first-child,
 h6:first-child {
-  margin-top: 0; 
+  margin: 0; 
 }
 
 h1, .h1,
@@ -211,7 +213,8 @@ h2, .h2 {
   font-size: 1.5625rem;
   line-height: 1.95rem;
   margin-top: 1.3rem;
-  margin-bottom: 1.3rem; }
+  margin-bottom: 1.3rem; 
+}
 
 h3, .h3,
 h4, .h4 {
@@ -330,7 +333,7 @@ code {
 /* todo: https://codepen.io/ghepting/pen/tLnHK/ */
 a {
   color: var(--color-black);
-  white-space: nowrap; 
+  white-space: nowrap;
 }
 
 kbd kbd {
@@ -653,4 +656,29 @@ kbd kbd {
 
 .post .next {
     float: right;
+}
+
+
+
+
+
+
+/*
+    EPISODE LIST
+*/
+.episode-list h2 {
+    margin-top: 2.6rem;
+}
+
+.episode-list a {
+    text-decoration: none;
+}
+
+.episode-list a:hover {
+    background-color: var(--color-primary);
+}
+
+.episode-list p {
+    font-size: 16px;
+    line-height: 1.3;
 }
