--- a/css/site.css
+++ b/css/site.css
@@ -734,3 +734,15 @@ kbd kbd {
     font-size: 16px;
     line-height: 1.3;
 }
+
+
+
+
+
+
+/*
+    ABOUT
+*/
+.about h2 {
+    margin-top: 2.6rem;
+}
