Move about ideas to about page

--- a/about.njk
+++ b/about.njk
@@ -4,12 +4,18 @@ brian:
     - <a href="https://koser.us/brian">Personal website</a>
     - I am compelled to rank everything. And I like to talk.
     - "Favorite episode: <a href='/episodes/003-podcasts'>№ 3 Podcats</a>"
+    - "Favorite punctuation mark: ?"
+    - "Favorite emoji: ⚗️"
 melissa:
     - <a href="https://koser.us/melissa">Personal website</a>
     - about melissa
     - "Favorite episode: <a href='/episodes/002-musicals'>№ 2 Musicals</a>"
 ---
 <h1>About</h1>
+
+{# Mobile: full screen picture of each host saturated to hosts color, bio overlaid
+Desktop: same, but left side is Melissa, right half is Brian #}
+
 <div class="about">
     {% list "Melissa", melissa %}
     {% list "Brian", brian %}
