Generalize episode block heading

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -23,7 +23,7 @@
                     <li><a href="/subscribe/">[i] Subscribe</a>
                     {# <li><a href="/about/">About</a> #}
                     <li class="episode-info">
-                        {% episodeBlock collections.episodes | last, metadata.cdn_url %}
+                        {% episodeBlock collections.episodes | last, "Latest", metadata.cdn_url %}
                         {# <div><a href="#">Recommended</a></div> #}
                     <li>
                         <div class="site-nav-footer">
