Desktop site, home page styles

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -13,7 +13,7 @@
         <header class="site-header js-site-nav">
             <div class="header-flex">
                 <img alt="logo">
-                <a id="site-nav-link" href="#site-nav">☰ Menu</a>
+                <a id="site-nav-link" href="#site-nav" class="menu-link">☰ Menu</a>
             </div>
             <nav id="site-nav" class="site-nav js-site-nav">
                 <ol>
