--- a/index.njk
+++ b/index.njk
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-<p>Ten to One is the podcast where Melissa and Brian Koser make top ten lists about everything.</p>
+<p class="headline">Ten to One is the podcast where Melissa and Brian Koser make top ten lists about everything.</p>
 
 <div class="home-episodes">
     <div class="section">
