--- a/css/site.css
+++ b/css/site.css
@@ -153,11 +153,11 @@ html, .root {
 body, .body {
     font-family: Concourse, OpenSansNumero, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 20px;
-    line-height: 1.4;
+    line-height: 1.3;
     color: var(--color-black);
     margin-bottom: 0;
     font-variant-ligatures: common-ligatures;
-    width: 100%; /* see if this fixes too wide screen on mobile*/
+    width: 100%;
 
     display: grid;
     grid-template-columns: .5rem 1fr .5rem;
@@ -579,30 +579,6 @@ kbd kbd {
     justify-content: space-evenly;
 }
   
-@media screen and (min-width: 48.25em) {
-    a.menu-link {
-        display: none;
-    }
-
-    .js .site-nav {
-        max-height: none;
-    }
-
-    .site-nav ol {
-        margin: 0 0 0 -0.25em;
-        border: 0;
-    }
-    
-    .site-nav  li {
-        display: inline-block;
-        margin: 0 0.25em;
-    }
-
-    .site-nav li a {
-        border: 0;
-    }
-}
-
 
 
 
@@ -654,8 +630,9 @@ kbd kbd {
 }
 
 .episode-block .number,
+.episode-card .number ,
 .episode-card .title {
-    font-size: 40px;
+    font-size: 2rem;
     line-height: 0.8em;
     margin-right: 0.2em;
 }
@@ -663,10 +640,6 @@ kbd kbd {
 .episode-card header,
 .episode-card .summary {
     margin-top: 0.65rem;
-}
-
-.episode-card .title {
-    display: block;
 }
 
 .episode-card a {
@@ -782,4 +755,89 @@ kbd kbd {
 */
 .about h2 {
     margin-top: 2.6rem;
+}
+
+
+
+
+
+
+/*
+    DESKTOP STYLES
+*/
+@media screen and (min-width: 48.25em) {
+    /*
+        SITE GRID
+    */
+    body, .body {
+        height: 100vh;
+        font-size: 24px;
+        grid-template-columns: 1fr 2fr;
+        grid-template-areas: 
+            "header main" 
+            "header footer";
+        row-gap: 2.6rem;
+    }
+
+    .site-header {
+        font-size: 24px;
+        padding: 0;
+    }
+
+    .site-main {
+        padding: 1.3em;
+    }
+
+
+
+    h2, .h2 {
+        font-size: 1.95313rem;
+        letter-spacing: -0.03em; 
+    }
+    
+
+
+    /*
+        NAVIGATION
+    */
+    a.menu-link {
+        display: none;
+    }
+
+    .js .site-nav {
+        max-height: none;
+    }
+
+    .site-nav ol {
+        border: 0;
+    }
+
+    .site-nav li a {
+        border: 0;
+    }
+
+    .site-nav .episode-info,
+    .site-nav .site-nav-footer {
+        margin-top: 1.3em;
+    }
+
+
+
+    .headline {
+        font-size: 1.5em;
+    }
+
+    .episode-block {
+        column-gap: 10px;
+        row-gap: 10px;
+    }
+
+    .episode-card .number ,
+    .episode-card .title {
+        display: inline;
+    }
+
+    .episode-card .summary {
+        margin-top: 0;
+    }
 }
