Episode, episode list desktop styles (fixes #17)

--- a/_includes/layouts/episode.njk
+++ b/_includes/layouts/episode.njk
@@ -27,9 +27,11 @@ layout: base
             {% endif %}
         </details>
     
-        <h2>Feedback</h2>
-        <p>[i] Email <a href="mailto:tto@koser.us">tto@koser.us</a></p>         
-        <div class="comments">implement comments here</p>
+        <div class="feedback">
+            <h2>Feedback</h2>
+            <p>[i] Email <a href="mailto:tto@koser.us">tto@koser.us</a></p>         
+            <div class="comments">implement comments here</p>
+        </div>
     </div>
     
     <footer>
