--- a/css/site.css
+++ b/css/site.css
@@ -659,7 +659,7 @@ kbd kbd {
     EPISODE POST
 */
 .post nav {
-    font-size: 14px;
+    font-size: 0.75em;
 }
 
 .post audio,
@@ -683,11 +683,11 @@ kbd kbd {
 
 .post .spoilers {
     background-color: var(--color-black);
-    padding-left: 1em;
+    padding: 0 0 1em 1em;
 }
 
 .post .spoilers h2 {
-    margin-left: -0.7rem;
+    margin-left: -0.4em;
 }
 
 .post .spoilers summary {
@@ -741,7 +741,7 @@ kbd kbd {
 }
 
 .episode-list p {
-    font-size: 16px;
+    font-size: 0.8em;
     line-height: 1.3;
 }
 
@@ -789,6 +789,11 @@ kbd kbd {
     }
 
 
+
+    h1, .h1 {
+        font-size: 2.441rem;
+        letter-spacing: -0.03em; 
+    }
 
     h2, .h2 {
         font-size: 1.95313rem;
@@ -839,5 +844,15 @@ kbd kbd {
 
     .episode-card .summary {
         margin-top: 0;
+    }
+
+
+
+    /*
+        POST
+    */
+    .post .spoilers,
+    .post .feedback {
+        margin-top: 5.2rem;
     }
 }
